--- a/assets/index.html
+++ b/assets/index.html
@@ -6,6 +6,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="reset" type="text/css" href="/assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
 </head>
 
@@ -13,7 +14,20 @@
     <header>
         <h1>My Portfolio</h1>
         <nav>
-            
+            <ul>
+                <li>
+                    About Me
+                </li>
+                <li>
+                    My Work
+                </li>
+                <li>
+                    Contact Me
+                </li>
+                <li>
+                    Resume
+                </li>
+            </ul>
         </nav>
     </header>
 </body>
