--- a/assets/index.html
+++ b/assets/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>My Portfolio</h1>
+        <h1>RosemaryJF PORTFOLIO</h1>
         <nav>
             <ul>
                 <li>
@@ -30,5 +30,24 @@
             </ul>
         </nav>
     </header>
+
+    <main>
+        <section>
+            <p class="about">ABOUT ME</p>
+        </section>
+
+        <section id="card">
+            <p>WORK</p>
+        </section>
+
+        <section id="card">
+            <p>CONTACT ME</p>
+        </section>
+
+        <section id="card">
+            <p>RESUME</p>
+        </section>
+    </main>
+
 </body>
 </html>
