Adjustment of elements in html and corresponding properties in stylesheet

--- a/assets/index.html
+++ b/assets/index.html
@@ -32,20 +32,20 @@
     </header>
 
     <main>
-        <section>
-            <p class="about">ABOUT ME</p>
+        <section id="card">
+            <h2 class="about">ABOUT ME</h2>
         </section>
 
         <section id="card">
-            <p>WORK</p>
+            <h2>WORK</h2>
         </section>
 
         <section id="card">
-            <p>CONTACT ME</p>
+            <h2>CONTACT ME</h2>
         </section>
 
         <section id="card">
-            <p>RESUME</p>
+            <h2>RESUME</h2>
         </section>
     </main>
 
