--- a/assets/index.html
+++ b/assets/index.html
@@ -16,35 +16,35 @@
         <nav>
             <ul>
                 <li>
-                    About Me
+                    <a href="#about-me">About Me</a>
                 </li>
                 <li>
-                    My Work
+                    <a href="#my-work">My Work</a>
                 </li>
                 <li>
-                    Contact Me
+                    <a href="#contact-me">Contact Me</a>
                 </li>
                 <li>
-                    Resume
+                    <a href="#resume">Resume</a>
                 </li>
             </ul>
         </nav>
     </header>
 
     <main>
-        <section id="card">
+        <section id="card" id="about-me">
             <h2 class="about">ABOUT ME</h2>
         </section>
 
-        <section id="card">
+        <section id="card" id="my-work">
             <h2>WORK</h2>
         </section>
 
-        <section id="card">
+        <section id="card" id="contact-me">
             <h2>CONTACT ME</h2>
         </section>
 
-        <section id="card">
+        <section id="card" id="resume">
             <h2>RESUME</h2>
         </section>
     </main>
