Addition of avatar image and sizing elements

--- a/assets/index.html
+++ b/assets/index.html
@@ -31,10 +31,15 @@
         </nav>
     </header>
 
-    <main>
-        <section id="card" id="about-me">
-            <h2 class="about">ABOUT ME</h2>
+    <aside>
+        <section id="about-card" id="about-me">
+            <h2>ABOUT ME</h2>
+            <br>
+            <img src="./images/MyAvatar.png" class="my-avatar" alt="A avatar shows a female face with lighter skin, dark brown hair, green eyes and a slight smile on her face">
         </section>
+    </aside>
+    
+    <main>
 
         <section id="card" id="my-work">
             <h2>WORK</h2>
@@ -48,6 +53,8 @@
             <h2>RESUME</h2>
         </section>
     </main>
+
+
 
 </body>
 </html>
