Addition of contact info and linking attributes

--- a/assets/index.html
+++ b/assets/index.html
@@ -32,25 +32,34 @@
     </header>
 
     <aside>
-        <section id="about-card" id="about-me">
+        <section id="about-card" id="#about-me">
             <h2>ABOUT ME</h2>
             <br>
             <img src="./images/MyAvatar.png" class="my-avatar" alt="A avatar shows a female face with lighter skin, dark brown hair, green eyes and a slight smile on her face">
         </section>
     </aside>
-    
+
     <main>
 
-        <section id="card" id="my-work">
+        <section id="card-float-left" id="#my-work">
             <h2>WORK</h2>
         </section>
 
-        <section id="card" id="contact-me">
+        <section id="card-float-right" id="#contact-me">
             <h2>CONTACT ME</h2>
+            <br>
+            <ul>
+                <li>Shoot me an email at: <a href="mailto:rosemaryjforster@gmail.com">rosemaryjforster@gmail.com</a></li>
+                <li>Give me buzz on: <a href="tel:+61-418-472-854">+61 418 472 854</a></li>
+                <li>Check out my GitHub Profile: <a href="https://github.com/RosemaryJF" target="_blank">github.com/RosemaryJF</a></li>
+            </ul>
+            
         </section>
 
-        <section id="card" id="resume">
+        <section id="card-float-right" id="#resume">
             <h2>RESUME</h2>
+            <br>
+            <p>Follow this link <a href="#">here</a> to view my resume.</spac></p>
         </section>
     </main>
 
