--- a/assets/index.html
+++ b/assets/index.html
@@ -31,8 +31,10 @@
         </nav>
     </header>
 
+    <div class="hero-image"></div>
+
     <aside>
-        <section id="about-card" id="#about-me">
+        <section id="about-card" id="about-me">
             <h2>ABOUT ME</h2>
             <br>
             <img src="./images/MyAvatar.png" class="my-avatar" alt="A avatar shows a female face with lighter skin, dark brown hair, green eyes and a slight smile on her face">
@@ -41,11 +43,17 @@
 
     <main>
 
-        <section id="card-float-left" id="#my-work">
+        <section id="card-float-left" id="my-work">
             <h2>WORK</h2>
         </section>
 
-        <section id="card-float-right" id="#contact-me">
+        <section id="card-float-right" id="resume">
+            <h2>RESUME</h2>
+            <br>
+            <p>Follow this link <a href="#">here</a> to download my resume.</p>
+        </section>
+        
+        <section id="card-float-right" id="contact-me">
             <h2>CONTACT ME</h2>
             <br>
             <ul>
@@ -53,14 +61,8 @@
                 <li>Give me buzz on: <a href="tel:+61-418-472-854">+61 418 472 854</a></li>
                 <li>Check out my GitHub Profile: <a href="https://github.com/RosemaryJF" target="_blank">github.com/RosemaryJF</a></li>
             </ul>
-            
         </section>
 
-        <section id="card-float-right" id="#resume">
-            <h2>RESUME</h2>
-            <br>
-            <p>Follow this link <a href="#">here</a> to view my resume.</spac></p>
-        </section>
     </main>
 
 
