--- a/assets/index.html
+++ b/assets/index.html
@@ -22,11 +22,12 @@
                     <a href="#my-work">My Work</a>
                 </li>
                 <li>
-                    <a href="#contact-me">Contact Me</a>
-                </li>
-                <li>
                     <a href="#resume">Resume</a>
                 </li>
+                <li>
+                    <a href="#contact-me">Contact Me</a>
+                </li>
+                
             </ul>
         </nav>
     </header>
@@ -34,7 +35,7 @@
     <div class="hero-image"></div>
 
     <aside>
-        <section id="about-card" id="about-me">
+        <section class="about-card" id="about-me">
             <h2>ABOUT ME</h2>
             <br>
             <img src="./images/MyAvatar.png" class="my-avatar" alt="A avatar shows a female face with lighter skin, dark brown hair, green eyes and a slight smile on her face">
@@ -43,17 +44,17 @@
 
     <main>
 
-        <section id="card-float-left" id="my-work">
+        <section class="card-float-left" id="my-work">
             <h2>WORK</h2>
         </section>
 
-        <section id="card-float-right" id="resume">
+        <section class="card-float-right" id="resume">
             <h2>RESUME</h2>
             <br>
             <p>Follow this link <a href="#">here</a> to download my resume.</p>
         </section>
         
-        <section id="card-float-right" id="contact-me">
+        <section class="card-float-right" id="contact-me">
             <h2>CONTACT ME</h2>
             <br>
             <ul>
