Addition of unformatted about me text

--- a/assets/index.html
+++ b/assets/index.html
@@ -39,6 +39,10 @@
             <h2>ABOUT ME</h2>
             <br>
             <img src="./images/MyAvatar.png" class="my-avatar" alt="A avatar shows a female face with lighter skin, dark brown hair, green eyes and a slight smile on her face">
+            <p>Sydney-sider dreaming of living somewhere quieter where I can climb outside more often than not.</p>
+            <p>Looking to increase my coding experience exponentially so that I can do all the fancy things and optimise websites and applications to their best selves.</p>
+            <p>With over 10 years experience in management I work well autonomsly or in a team. If I can work my way up to project management in this industry that would be amaze.</p>
+            <p>Also, as an aside, can't wait to make this portfolio page snazzier as this course and my skills progress.</p>
         </section>
     </aside>
 
