--- a/assets/index.html
+++ b/assets/index.html
@@ -37,11 +37,10 @@
     <aside>
         <section class="about-card" id="about-me">
             <h2>ABOUT ME</h2>
-            <br>
             <img src="./images/MyAvatar.png" class="my-avatar" alt="A avatar shows a female face with lighter skin, dark brown hair, green eyes and a slight smile on her face">
             <p>Sydney-sider dreaming of living somewhere quieter where I can climb outside more often than not.</p>
             <p>Looking to increase my coding experience exponentially so that I can do all the fancy things and optimise websites and applications to their best selves.</p>
-            <p>With over 10 years experience in management I work well autonomsly or in a team. If I can work my way up to project management in this industry that would be amaze.</p>
+            <p>With over 10 years experience in management I work well autonomously or in a team. If I can work my way up to project management in this industry that would be amaze.</p>
             <p>Also, as an aside, can't wait to make this portfolio page snazzier as this course and my skills progress.</p>
         </section>
     </aside>
@@ -63,7 +62,9 @@
             <br>
             <ul>
                 <li>Shoot me an email at: <a href="mailto:rosemaryjforster@gmail.com">rosemaryjforster@gmail.com</a></li>
+                <br>
                 <li>Give me buzz on: <a href="tel:+61-418-472-854">+61 418 472 854</a></li>
+                <br>
                 <li>Check out my GitHub Profile: <a href="https://github.com/RosemaryJF" target="_blank">github.com/RosemaryJF</a></li>
             </ul>
         </section>
