Move and formatting of contact me section to footer

--- a/assets/index.html
+++ b/assets/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>RosemaryJF PORTFOLIO</h1>
+        <h1>Hi there! I'm RosemaryJF</h1>
         <nav>
             <ul>
                 <li>
@@ -47,16 +47,22 @@
 
     <main>
 
-        <section class="card-float-left" id="my-work">
-            <h2>WORK</h2>
+        <section class="projects" id="my-work">
+            <h2>PROJECTS & WORKS</h2>
+            <p>Here you will find some links to projects I have worked on and websites/application I have built myself.
+                Keep checking back as I do more work and add to it!</p>
         </section>
 
-        <section class="card-float-right" id="resume">
+        <section class="resume" id="resume">
             <h2>RESUME</h2>
             <br>
             <p>Follow this link <a href="#">here</a> to download my resume.</p>
         </section>
         
+        
+    </main>
+
+    <footer>
         <section class="card-float-right" id="contact-me">
             <h2>CONTACT ME</h2>
             <br>
@@ -68,8 +74,7 @@
                 <li>Check out my GitHub Profile: <a href="https://github.com/RosemaryJF" target="_blank">github.com/RosemaryJF</a></li>
             </ul>
         </section>
-
-    </main>
+    </footer>
 
 
 
