Beginning of adding projects

--- a/assets/index.html
+++ b/assets/index.html
@@ -51,6 +51,8 @@
             <h2>PROJECTS & WORKS</h2>
             <p>Here you will find some links to projects I have worked on and websites/application I have built myself.
                 Keep checking back as I do more work and add to it!</p>
+            <div id="first-project"><h3>HORISEON REFACTOR</h3></div>
+            <img src="./images/digital-marketing-meeting.jpg" class="horiseon-refactor" alt="An image displays a person leaning on a table talking to others around it">
         </section>
 
         <section class="resume" id="resume">
