--- a/assets/index.html
+++ b/assets/index.html
@@ -14,7 +14,7 @@
     <header>
         <h1>Hi there!</h1>
         <h1>I'm RosemaryJF</h1>
-        <img src="./images/MyAvatar.png" class="my-avatar" alt="A avatar shows a female face with lighter skin, dark brown hair, green eyes and a slight smile on her face">
+        <div class="my-photo"></div>
         <br>
     </header>
 
