further work on my image placement and rewording my about me

--- a/assets/index.html
+++ b/assets/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./images/Favicon.jpg">
     <link rel="reset" type="text/css" href="/assets/css/reset.css">
     <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
     <title>RosemaryJF Portfolio Page</title>
@@ -14,7 +15,7 @@
     <header>
         <h1>Hi there!</h1>
         <h1>I'm RosemaryJF</h1>
-        <div class="my-photo"></div>
+        <div class="container clearfix"></div>
         <br>
     </header>
 
@@ -42,10 +43,8 @@
         <section class="about-card" id="about-me">
             <h2>ABOUT ME</h2>
             <br>
-            <p>Sydney-sider dreaming of living somewhere quieter where I can climb outside more often than not.</p>
-            <p>Looking to increase my coding experience exponentially so that I can do all the fancy things and optimise websites and applications to their best selves.</p>
-            <p>With over 10 years experience in management I work well autonomously or in a team. If I can work my way up to project management in this industry that would be amaze.</p>
-            <p>Also, as an aside, can't wait to make this portfolio page snazzier as this course and my skills progress.</p>
+            <p>I'm currently based in Sydney, conducting study to be a web developer through a 6 month coding bootcamp.</p>
+            <p>I'm looking forward to adding and growing this portfolio as I continue on this career path.</p>
         </section>
     
         <section class="resume" id="resume">
