Adjustment of project box and moving of image reference

--- a/assets/index.html
+++ b/assets/index.html
@@ -59,8 +59,8 @@
 
         <section class="projects" id="my-work">
             <h2>PROJECTS & WORKS</h2>
-            <p>Here you will find some links to projects I have worked on and websites/application I have built myself.
-                Keep checking back as I do more work and add to it!</p>
+            <p>Here you will find some links to projects I have worked on and websites/application I have built myself.</p>
+            <p>Keep checking back as I do more work and add to it!</p>
             <div class="first-project"><h3>HORISEON REFACTOR</h3></div>
         </section>
 
