Futher CSS work on projects

--- a/assets/index.html
+++ b/assets/index.html
@@ -61,11 +61,11 @@
             <h2>PROJECTS & WORKS</h2>
             <p>Here you will find some links to projects I have worked on and websites/application I have built myself.</p>
             <p>Keep checking back as I do more work and add to it!</p>
-            <div id="first-project"><h3><a href="https://github.com/RosemaryJF/horiseon-refactor" target="_blank">HORISEON REFACTOR</a></h3></div>
-            <div id="second-project"><h3><a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a></h3></div>
-            <div id="third-project"><h3><a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a></h3></div>
-            <div id="fourth-project"><h3><a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a></h3></div>
-            <div id="fifth-project"><h3><a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a></h3></div>
+            <div class="card project-card" id="first-project"><h3><a href="https://github.com/RosemaryJF/horiseon-refactor" target="_blank">HORISEON REFACTOR</a></h3></div>
+            <div class="card project-card" id="second-project"><h3><a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a></h3></div>
+            <div class="card project-card" id="third-project"><h3><a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a></h3></div>
+            <div class="card project-card" id="fourth-project"><h3><a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a></h3></div>
+            <div class="card project-card" id="fifth-project"><h3><a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a></h3></div>
         </section>
         
 
