--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="reset" type="text/css" href="/assets/css/reset.css">
-    <link rel="stylesheet" type="text/css" href="./css/stylesheet.css">
+    <link rel="stylesheet" type="text/css" href="./assets/css/stylesheet.css">
     <title>RosemaryJF Portfolio Page</title>
-    <link rel="icon" type="image/x-icon" href="./images/Favicon.jpg">
+    <link rel="icon" type="image/x-icon" href="./assets/images/Favicon.jpg">
 </head>
 
 <body>
