--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <!--To be linked once next assignment is completed. Image to change as needed.-->
             <div class="project-card" id="second-project">
                 <h3>
-                    <a href="https://github.com/RosemaryJF" target="_blank">COMING SOON</a>
+                    <a href="https://github.com/AlexMastroianni/MusicFwends" target="_blank">Music Fwends</a>
                 </h3>
             </div>
 
